### Version 0.3.0 (29.05.2024)
Initial release version

### Version 1.0.0
General improvements and necessary changes for Offer NLPI v1.0.0

- AdditionalOptionsType (Changed)
    - Inlined definition for array items
- AdditionalOptionType (Removed)
- AddressType (Renamed)
    - Renamed to AddressDefinitions
- AgencyType (Removed)
- BenefitPeriodType (Removed)
    - Moved type to Offer NLPI standard
- BrokerContactType (Added)
- BrokerType (Changed)
    - changed property "companyId" to mandatory
    - added properties "brokerBranch" and "brokerContact"
- CompanyLegalFormType (Changed)
    - added enum value "Unknown"
- CompanyLegalStatusType (Changed)
    - fixed wrong capitalization of some enum values
- ContactType (Changed)
    - changed property "contactPhone" to mandatory
- CustomerType (Renamed)
    - Renamed CustomerType to CompanyCustomerType
- HeaderType (Changed)
    - Extracted content of properties "recipient" and "sender" to "SenderReceiverType"
    - require properties "brokerBranch" and "brokerContact" when broker is sender
    - require properties "insurerContact" when insurer is sender
- InsurerType (Changed)
    - changed property "companyId" to mandatory
    - added property "insurerContact"
- LocalityCorrespondenceType (Removed)
    - Duplicate of LocalityDomicilType.
- LocalityDomicilType (Renamed)
    - Renamed to AddressType
- MonetaryAmountType (Added)
- OrgUnitNumberType (Added)
- OtherExchangePartnerType (Documentation)
- PersonGroupIdType (Renamed)
    - Renamed to be used as a more general UuidType.
- SenderReceiverType (Added)
- TimeStampType (Documentation)
    - Added example














