@@ -2,7 +2,7 @@
   "companyName": "Coiffeur Verband Schweiz",
   "companyId": "CHE-105.841.533",
   "companyLegalForm": "Association",
-  "companyFoundingDate": "2024-09-16",
+  "companyFoundingYear": "2024",
   "domicilAddress": {
     "streetName": "Zollstrasse",
     "houseNumber": "1",
