@@ -3,7 +3,7 @@
   "companyId": "CHE-105.841.533",
   "companyLegalForm": "Association",
   "companyLegalStatus": "active",
-  "companyFoundingDate": "2024-09-16",
+  "companyFoundingYear": "2024",
   "domicilAddress": {
     "streetName": "Zollstrasse",
     "houseNumber": "1",
